# MolCodon

./: LICENSE  MANIFEST.in  MOLCODON_CODON_DICTIONARY.md  README.md  install.sh  molcodon_decoder.py  molcodon_encoder.py  molcodon_match.py  molcodon_similarity.py  molcodon_trace.py  molcodon_viz.py  pyproject.toml
tests/: test_smoke.py
