[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molcodon"
version = "0.1.0"
description = "MolCodon molecular encoding, decoding, and component-based similarity scoring."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "MolCodon authors" }
]
keywords = ["cheminformatics", "molecular-representation", "rdkit", "similarity", "smiles"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "rdkit>=2023.9",
]

[project.scripts]
molcodon-encode = "molcodon_encoder:main"
molcodon-decode = "molcodon_decoder:main"
molcodon-similarity = "molcodon_similarity:main"

[tool.setuptools]
py-modules = [
    "molcodon_encoder",
    "molcodon_decoder",
    "molcodon_trace",
    "molcodon_match",
    "molcodon_viz",
    "molcodon_similarity",
]

[tool.setuptools.package-data]
"*" = ["*.md"]
